   * Added some new cgdb commands.
       :c is now a synonym for :continue
       :f is now a synonym for :finish
       :n is now a synonym for :next
       :r is not a synonym for :run
       :s is now a synonym for :step
       :start is a new command that will send "start" to the debugger
       :kill is a new command that will send "kill" to the debugger

   * Shortcut mode has been removed from cgdb. If you liked it, you can
     put these commands in your cgdbrc file,
       map r :run<CR>
       map c :continue<CR>
       map f :finish<CR>
       map n :next<CR>
       map s :step<CR>
     and you will get the same functionality. Do not forget that,
       F5 is the same as 'run'.
       F6 is the same as 'continue'.
       F7 is the same as 'finish'.
       F8 is the same as 'next'.
       F10 is the same as 'step'.
     are always available.

   * Added a feature to CGDB which allows it to ask readline what key
     sequence it uses for the Home and End keys. That way, if the terminfo
     database is wrong, but the OS vendor modified /etc/inputrc, CGDB will
     have a working Home and End key.

   * CGDB fully supports the use of maps now. The feature is similar in 
     nature to the vim map feature.  It supports map, unmap, imap
     and iunmap. The map/unmap work in CGDB mode and the imap/iunmap
     work in GDB mode.

   * Added the cgdbmodekey configuration option. This allows the user to
     change the key that switches them from GDB mode to CGDB mode. The
     default value is the Escape key. This is useful for users that want
     to use readline in vi-mode.

   * Fixed a bug in CGDB where the Insert and Delete keys were not 
     recognized properly all of the time.

cgdb-0.6.4 (04/28/2007)

   * CGDB can now be compiled with -jN option. It would fail previously.

   * CGDB should now build on freebsd with out any patches.

   * Added a new highlighting group, SelectedLineNr. From the documentation: