@@ -1,3 +1,8 @@
+   * Made searching and :commands a little more vi-like. If you abort a
+     search, you can still recall the last search with 'n' or 'N'.  If you
+     backspace to the beginning of the line, a :command or /search is
+     aborted.
+
    * Added some new cgdb commands.
        :c is now a synonym for :continue
        :f is now a synonym for :finish
